test/testdata/variables/undeclared_assignment_error_global_declared_after_function_call.lox
fun setX(value) {
    x = value;
}

setX(2); // error: x has not been declared
var x;
